tests/negative/typecheck/addr_cast_to_not_ptr.orng
// ptr_cast_to_not_ptr.orng:7:29: error: expected address type type for addr_cast, got `Int`
//     let y: Int = @addr_cast(x)
//                            ^
// 
fn main() -> Int {
    let x = 4
    let y: Int = @addr_cast(x)
}
